--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "npx prettier --write ."
   },
   "devDependencies": {
+    "@types/node": "^20.11.17",
+    "prettier": "^3.2.5",
     "typescript": "^5.2.2",
     "vite": "^5.1.0"
-  }
+  },
+  "dependencies": {}
 }
