--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "nodemon api/server.js localhost 8080",
     "dev": "vite",
@@ -18,7 +19,5 @@
     "typescript": "^5.2.2",
     "vite": "^5.1.0"
   },
-  "dependencies": {
-    "p5": "^1.9.0"
-  }
+  "dependencies": {}
 }
